# shamir_share

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark_optimized.rs  hsss_performance_analysis.rs  justfile  performance_compare.rs  performance_test.rs  run_streaming_benchmarks.sh
.docs/: CI_BENCHMARK_SETUP.md  HSSS_OPTIMIZATION_SUMMARY.md  SAMPLE_BENCHMARK_OUTPUT.md  STREAMING_BENCHMARKS.md  ZEROIZE_INTEGRATION_SUMMARY.md
.github/workflows/: README.md  main_benchmark_history.yml  pr_benchmark_check.yml  publish.yml
benches/: benchmark.rs  hsss_benchmarks.rs  in_memory_benchmarks.rs  refresh_benchmarks.rs  shamir_benchmarks.rs  streaming_benchmarks.rs
demo/: dealer_demo.rs
examples/: dealer_examples.rs  hsss_example.rs  performance_test_hsss.rs
fuzz/: Cargo.toml  README.md  run_fuzz.sh
fuzz/fuzz_targets/: fuzz_reconstruct.rs  fuzz_share_storage.rs
src/: config.rs  error.rs  finite_field.rs  hsss.rs  lib.rs  shamir.rs  storage.rs
tests/: compression_test.rs  configuration_test.rs  hsss_test.rs  refresh_test.rs  streaming_edge_cases_test.rs  streaming_success_test.rs
