[package]
name = "shamir_share"
version = "0.1.0"
edition = "2024"
authors = ["Ashim Kumar Saha"]
description = "A secure and efficient Rust library for Shamir's Secret Sharing"
license = "Apache-2.0"
repository = "https://github.com/ashim_kr_saha/shamir_share"
keywords = ["cryptography", "secret-sharing", "security", "shamir", "shamir-secret-sharing"]
categories = ["cryptography", "algorithms"]

[dependencies]
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
thiserror = "2.0.12"
rayon = "1.10.0"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
zstd = "0.13.3"
anyhow = "1.0.97"
once_cell = "1.21.1"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-test = "0.4.4"

[[bench]]
name = "shamir_benchmarks"
harness = false

[[bench]]
name = "benchmark"
harness = false