[package]
name = "shamir_share"
version = "0.2.0"
edition = "2024"
authors = ["Ashim Kumar Saha"]
description = "A secure and efficient Rust library for Shamir's Secret Sharing"
license = "MIT"
repository = "https://github.com/ashim-kr-saha/shamir_share"
keywords = ["cryptography", "secret-sharing", "security", "shamir"]
categories = ["cryptography", "algorithms"]

[dependencies]
rand = "0.9.1"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
thiserror = "2.0.12"
rayon = "1.10.0"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
zstd = { version = "0.13.3", optional = true }
anyhow = "1.0.97"
once_cell = "1.21.3"
sha2 = "0.10.9"
zeroize = { version = "1.8.1", features = ["zeroize_derive"], optional = true }

[features]
default = ["zeroize", "compress"]
compress = ["zstd"]

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-test = "0.4.4"

[[bench]]
name = "in_memory_benchmarks"
harness = false

[[bench]]
name = "streaming_benchmarks"
harness = false

[[bench]]
name = "hsss_benchmarks"
harness = false

[[bench]]
name = "benchmark"
harness = false
